--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
       <artifactId>thymeleaf</artifactId>
       <version>3.1.2.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.224</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
