--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
 hibernate.driver_class=org.h2.Driver
-hibernate.connection.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-hibernate.connection.username=admin
-hibernate.connection.password=admin
+hibernate.connection.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:init.sql';Mode=Oracle
+hibernate.connection.username="sa"
+hibernate.connection.password=""
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 hibernate.current_session_context_class=thread
